# MoBudgetRL-CorpFin

./: README.md  pyproject.toml  requirements.txt
configs/: experiment.yaml
data/synthetic/: strategy_meta.json
docs/: architecture.md  evaluation_plan.md  methodology.md
src/morlba/: __init__.py  cli.py
src/morlba/agents/: evo.py  pg.py
src/morlba/envs/: budget_env.py
src/morlba/eval/: frontier.py
src/morlba/utils/: config.py
tests/: test_demo.py
